<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainPage">

    <TextView
        android:id="@+id/appDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin30dp"
        android:paddingTop="@dimen/margin40dp"
        android:paddingRight="@dimen/margin30dp"
        android:paddingBottom="@dimen/margin15dp"
        android:text="@string/appDescriptionText"
        android:textColor="@android:color/black"
        android:textSize="@dimen/buttonTxtSize"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/mainPageImg"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:contentDescription="@string/mainPageImgDescription"
        android:padding="@dimen/margin15dp"
        app:srcCompat="@drawable/tech_search" />

    <Button
        android:id="@+id/buttonKnowMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnKnowMore"
        android:textAllCaps="false"
        android:textSize="@dimen/buttonTxtSize" />
</LinearLayout>