<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/titleTxtSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="386dp"
        android:contentDescription="@string/logoImageDesc"
        android:padding="@dimen/margin10dp"
        app:srcCompat="@drawable/tech_gadget_icon" />

    <Button
        android:id="@+id/mainPageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin10dp"
        android:text="@string/mainPageButtonTxt"
        android:textAllCaps="false"
        android:textSize="@dimen/buttonTxtSize" />

</LinearLayout>